# jira-fork-tool

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  todo.md
config/: config.example.yaml
docs/: jira_api_research.md  project_plan.md  system_architecture.md
src/jira_fork_tool/: __init__.py  batch_transfer.py  main.py
src/jira_fork_tool/api/: __init__.py
src/jira_fork_tool/auth/: __init__.py
src/jira_fork_tool/config/: __init__.py
src/jira_fork_tool/sync/: __init__.py  content_handler.py  link_mapper.py
src/jira_fork_tool/ui/: __init__.py
src/jira_fork_tool/utils/: __init__.py
